--- a/app/src/main/res/layout/fragmentone.xml
+++ b/app/src/main/res/layout/fragmentone.xml
@@ -5,46 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/shouye_image"
-            android:src="@mipmap/ic_launcher"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/shouye_huihuazuozhe"
-            android:text="绘画"
-            android:textSize="15sp"
-            android:gravity="center"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:textSize="30sp"
-            android:id="@+id/shouye_suibi"
-            android:text="dsajkfjdretretrtretretretrlsfdsj"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/shouye_suibizuozhe"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:text="随笔作者"
-            />
-    </LinearLayout>
-
+        android:id="@+id/one_swipe"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recycler_one"
         android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
