--- a/app/src/main/res/layout/fragmenttwo.xml
+++ b/app/src/main/res/layout/fragmenttwo.xml
@@ -4,9 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:id="@+id/two_swipe"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recycler_two"
         android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
