--- a/app/src/main/res/layout/fragmentone.xml
+++ b/app/src/main/res/layout/fragmentone.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:scrollbars="vertical"
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:id="@+id/one_swipe"
-        android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
+        android:layout_height="0dp"
+        android:id="@+id/myViewPager"
+        android:layout_weight="1"
+        ></android.support.v4.view.ViewPager>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:id="@+id/recycler_one"
-        android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_height="0dp"
+        android:background="#f1f1f2"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#ff0000"
+        app:tabTextColor="#ffffff" />
 </LinearLayout>
